tests/valid/definite/RealDiv_Valid_3.whiley
real g(real x) requires x <= 0.5 && $ <= 0.166666666666668:
     return x / 3

void System::main([string] args):
     print str(g(0.234))
